--- a/index.html
+++ b/index.html
@@ -519,73 +519,9 @@
         </div>
     </div>
 </section>
-<!-- CASE STUDIES SECTION -->
-<section class="case_studies_section">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-12">
-                <div class="case_studies_content text-center">
-                    <h6>Portfolio</h6>
-                    <h2>Our Latest Case Studies</h2>
-                </div>
-            </div>
-        </div>
-        <div class="row" data-aos="fade-up">
-            <div class="owl-carousel owl-theme case-studies-carousel">
-                <div class="item">
-                    <div class="case_studies_box">
-                        <figure class="mb-0">
-                            <img src="assets/images/case_studies_image1.jpg" alt="" class="img-fluid">
-                        </figure>
-                        <div class="case_studies_box_content">
-                            <span>Marketing</span>
-                            <h5 class="text-white">Enhance Trust, Compliance, And Governance</h5>
-                            <a href="project.html" class="text-decoration-none">
-                                <figure class="mb-0">
-                                    <img src="assets/images/case_studies_arrow.png" alt="" class="img-fluid">
-                                </figure>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="case_studies_box">
-                        <figure class="mb-0">
-                            <img src="assets/images/case_studies_image2.jpg" alt="" class="img-fluid">
-                        </figure>
-                        <div class="case_studies_box_content">
-                            <span>Business</span>
-                            <h5 class="text-white">Cyber Security Protects Sensitive Data</h5>
-                            <a href="project.html" class="text-decoration-none">
-                                <figure class="mb-0">
-                                    <img src="assets/images/case_studies_arrow.png" alt="" class="img-fluid">
-                                </figure>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="case_studies_box">
-                        <figure class="mb-0">
-                            <img src="assets/images/case_studies_image3.jpg" alt="" class="img-fluid">
-                        </figure>
-                        <div class="case_studies_box_content">
-                            <span>Agency</span>
-                            <h5 class="text-white">The Steps to Gaining Privileged Access Security</h5>
-                            <a href="project.html" class="text-decoration-none">
-                                <figure class="mb-0">
-                                    <img src="assets/images/case_studies_arrow.png" alt="" class="img-fluid">
-                                </figure>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+
 <!-- VIDEO SECTION -->
-<div class="video_section">
+<!-- <div class="video_section">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-12">
@@ -601,7 +537,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 <!-- TESTIMONIALS SECTION -->
 <section class="testimonials-section position-relative">
     <div class="container">
@@ -766,183 +702,20 @@
         </figure>
     </div>
 </section> 
-<!-- NEWS & ARTICLES SECTION -->
-<section class="news_articles_section">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-12">
-                <div class="news_articles_content">
-                    <h6>News & Articles</h6>
-                    <h2>Our Latest Blog Posts</h2>
-                </div>
-            </div>
-        </div>
-        <div class="row" data-aos="fade-up">
-            <div class="col-lg-4 col-md-4 col-sm-6 col-12">
-                <div class="news_articles_box">
-                    <figure class="mb-0">
-                        <img src="assets/images/news_articles_image1.jpg" alt="" class="img-fluid">
-                    </figure>
-                    <div class="news_articles_box_content">
-                        <div class="span_wrapper">
-                            <span>March 18, 2019</span>
-                            <span class="dash">-</span>
-                            <span>0 Comments</span>
-                        </div>
-                        <a href="single-blog.html" class="text-decoration-none"><h5>Protect Your Workplace From Cyber Attacks</h5></a>
-                        <p class="text-size-14">Quisquam est rui dolorem iesum ruia dolor sit amreu...</p>
-                        <a href="single-blog.html" class="text-decoration-none">
-                            <i class="fa-light fa-arrow-right"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-6 col-12">
-                <div class="news_articles_box">
-                    <figure class="mb-0">
-                        <img src="assets/images/news_articles_image2.jpg" alt="" class="img-fluid">
-                    </figure>
-                    <div class="news_articles_box_content">
-                        <div class="span_wrapper">
-                            <span>March 18, 2019</span>
-                            <span class="dash">-</span>
-                            <span>0 Comments</span>
-                        </div>
-                        <a href="single-blog.html" class="text-decoration-none"><h5>The Security Risks of Changing Package Owners</h5></a>
-                        <p class="text-size-14">Ruisquam est rui dolorem iesum ruia dolor sit amreu...</p>
-                        <a href="single-blog.html" class="text-decoration-none">
-                            <i class="fa-light fa-arrow-right"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-6 col-12 column3">
-                <div class="news_articles_box">
-                    <figure class="mb-0">
-                        <img src="assets/images/news_articles_image3.jpg" alt="" class="img-fluid">
-                    </figure>
-                    <div class="news_articles_box_content">
-                        <div class="span_wrapper">
-                            <span>March 18, 2019</span>
-                            <span class="dash">-</span>
-                            <span>0 Comments</span>
-                        </div>                        
-                        <a href="single-blog.html" class="text-decoration-none"><h5>Avoid Mistakes in Your Social Media Posts</h5></a>
-                        <p class="text-size-14">Guisquam est rui dolorem iesum ruia dolor sit amreu...</p>
-                        <a href="single-blog.html" class="text-decoration-none">
-                            <i class="fa-light fa-arrow-right"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+
 <!-- FOOTER SECTION -->
 <section class="footer_section">
     <div class="container">
         <div class="middle_portion">
             <div class="row">
-                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 order-lg-1 order-sm-1 order-1">
-                    <div class="about_contact_wrapper">
-                        <a href="index-2.html">
-                            <figure>
-                                <img src="assets/images/fortified_footer_logo.png" alt="" class="img-fluid">
-                            </figure>
-                        </a>
-                        <p class="text-size-14">Quia voluptas sit asper aut oit aut fugit sed quia consequuntur magni nesciunt aorro...</p>
-                        <ul class="list-unstyled mb-0">
-                            <li>
-                                <i class="fa-solid fa-phone"></i>
-                                <a href="tel:+61383766284" class="text-decoration-none">+61 3 8376 6284</a>
-                            </li>
-                            <li class="contact_mail">
-                                <i class="fa-sharp fa-solid fa-envelope"></i>
-                                <a href="mailto:Info@fortifiedsecurity.com" class="text-decoration-none">Info@fortifiedsecurity.com</a>
-                            </li>
-                            <li class="mb-0 location">
-                                <i class="fa-solid fa-location-dot location"></i>
-                                <span class="text-size-14">21 King Street Melbourne, 3000, Australia</span>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-xl-2 col-lg-2 col-md-6 col-sm-6 col-6 order-lg-2 order-sm-2 order-2">
-                    <div class="navigation_col links">
-                        <h4>Navigation</h4>
-                        <ul class="list-unstyled mb-0">
-                            <li>
-                                <a href="index-2.html">Home</a>
-                            </li>
-                            <li>
-                                <a href="about.html">About Us</a>
-                            </li>
-                            <li>
-                                <a href="service.html">Services</a>
-                            </li>
-                            <li>
-                                <a href="project.html">Project</a>
-                            </li>
-                            <li>
-                                <a href="blog.html">Blog</a>
-                            </li>
-                            <li>
-                                <a href="contact.html">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-xl-2 col-lg-2 col-md-6 col-sm-6 col-6 order-lg-3 order-sm-4 order-3">
-                    <div class="services_col links">
-                        <h4>Services</h4>
-                        <ul class="list-unstyled mb-0">
-                            <li>
-                                <a href="index-2.html">Network Security</a>
-                            </li>
-                            <li>
-                                <a href="about.html">Database Security</a>
-                            </li>
-                            <li>
-                                <a href="service.html">Web Security</a>
-                            </li>
-                            <li>
-                                <a href="project.html">Locker Security</a>
-                            </li>
-                            <li>
-                                <a href="blog.html">Data Security</a>
-                            </li>
-                            <li>
-                                <a href="contact.html">Cloud Security</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 order-lg-4 order-sm-3 order-4">
-                    <div class="newsletter_content">
-                        <h4>Subscribe to Newsletter</h4>
-                        <form action="javascript:;">
-                            <div class="form-row position-relative">
-                                <input type="email" name="email" id="emailadd" class="form-control" placeholder="Enter Your Email Address">
-                                <div class="input-group-append form-button">
-                                    <button class="btn" name="btnsubmit" id="submitbtn" type="submit"><i class="fa-solid fa-paper-plane"></i></button>
-                                </div>
-                            </div>
-                        </form>
-                        <h6>Follow on social media:</h6>
-                        <ul class="list-unstyled mb-0">
-                            <li class="hover-effect"><a href="https://www.facebook.com/login/"><i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a></li>
-                            <li class="hover-effect"><a href="https://twitter.com/i/flow/login"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a></li>
-                            <li class="hover-effect"><a href="https://linkedin.com/login"><i class="fa-brands fa-linkedin-in mr-0" aria-hidden="true"></i></a></li>
-                        </ul>
-                    </div> 
-                </div>
+
             </div>
         </div>
     </div>
     <div class="bottom_portion">
         <div class="col-12"> 
             <div class="copyright">
-                <p>Copyright ©2024 Design & Developed By <span>Designingmedia</span></p>
+                <p>Copyright ©2025 <span>Fortified</span></p>
             </div>
         </div>
     </div>
