--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,21 @@
     <!-- /SEO Ultimate -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <meta charset="utf-8">
+
+    <meta name="title" content="Fortified | The Ultimate Secure Monitoring Solution" />
+    <meta name="description" content="Fortified offers cutting-edge monitoring solutions for discreet and reliable tracking. Stay informed with real-time access to calls, messages, GPS, and more—100% secure and undetectable." />
+    <meta name="keywords" content="Fortified, monitoring app, phone tracker, secure tracking, spy app, discreet monitoring, GPS tracking, parental control, anti-spyware, real-time monitoring" />
+    <meta name="author" content="Fortified Team" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Fortified | The Ultimate Secure Monitoring Solution" />
+    <meta property="og:description" content="Discover Fortified—your trusted solution for private and advanced device monitoring. Track calls, messages, GPS, and social media activities securely and undetectably." />
+    <meta property="og:image" content="assets/images/meta.webp" />
+    <meta property="og:url" content="" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:title" content="Fortified | The Ultimate Secure Monitoring Solution" />
+    <meta name="twitter:description" content="Take control with Fortified—your premier solution for secure and undetectable monitoring." />
+    <meta name="twitter:image" content="assets/images/meta.webp" />
+
     <link rel="apple-touch-icon" sizes="57x57" href="assets/images/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="assets/images/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="assets/images/favicon/apple-icon-72x72.png">
@@ -50,7 +65,7 @@
             <div class="main_header">
                 <div class="container-fluid">
                     <nav class="navbar navbar-expand-lg navbar-light p-0">
-                        <a class="navbar-brand" href="index-2.html"><figure class="logo mb-0"><img src="assets/images/fortified_logo.png" alt="" class="img-fluid"></figure></a>
+                        <a class="navbar-brand" href="./"><figure class="logo mb-0"><img src="assets/images/fortified_logo.png" alt="" class="img-fluid"></figure></a>
                         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                         <span class="navbar-toggler-icon"></span>
@@ -58,60 +73,23 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ml-auto">
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle dropdown-color navbar-text-color" href="#" id="navbarDropdownone1" role="button" data-toggle="dropdown" aria-haspopup="true"
-                                        aria-expanded="false"> Home </a>
-                                    <div class="dropdown-menu drop-down-content">
-                                        <ul class="list-unstyled drop-down-pages">
-                                            <li class="nav-item"><a class="dropdown-item nav-link" href="index-2.html">Home 1</a></li>
-                                            <li class="nav-item"><a class="dropdown-item nav-link" href="index1.html">Home 2</a></li>
-                                            <li class="nav-item"><a class="dropdown-item nav-link" href="index2.html">Home 3</a></li>
-                                        </ul>
-                                    </div>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="about.html">About Us</a>
-                                </li>                           
+                                    <a class="nav-link" href="#about">About Us</a>
+                                </li>                            
                                 <li class="nav-item">
-                                    <a class="nav-link" href="service.html">Services</a>
+                                    <a class="nav-link" href="#service">Services</a>
                                 </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle dropdown-color navbar-text-color" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true"
-                                        aria-expanded="false"> Pages </a>
-                                    <div class="dropdown-menu drop-down-content">
-                                        <ul class="list-unstyled drop-down-pages">
-                                            <li class="nav-item"><a class="dropdown-item nav-link" href="project.html">Project</a></li>
-                                            <li class="nav-item"><a class="dropdown-item nav-link" href="cart.html">Cart</a></li>
-                                            <li class="nav-item"><a class="dropdown-item nav-link" href="checkout.html">Checkout</a></li>
-                                            <li class="nav-item"><a class="dropdown-item nav-link" href="shop.html">Our Shop</a></li>
-                                            <li class="nav-item"><a class="dropdown-item nav-link" href="product-detail.html">Product Detail</a></li>
-                                        </ul>
-                                    </div>
-                                </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle dropdown-color navbar-text-color" href="#" id="navbarDropdown3" role="button" data-toggle="dropdown" aria-haspopup="true"
-                                        aria-expanded="false"> Blog </a>
-                                    <div class="dropdown-menu drop-down-content">
-                                        <ul class="list-unstyled drop-down-pages">
-                                            <li class="nav-item"><a class="dropdown-item nav-link" href="blog.html">Blog</a></li>
-                                            <li class="nav-item"><a class="dropdown-item nav-link" href="single-blog.html">Single Blog</a></li>
-                                            <li class="nav-item"><a class="dropdown-item nav-link" href="load-more.html">Load More</a></li>
-                                            <li class="nav-item"><a class="dropdown-item nav-link" href="one-column.html">One Column</a></li>
-                                            <li class="nav-item"><a class="dropdown-item nav-link" href="two-column.html">Two Column</a></li>
-                                            <li class="nav-item"><a class="dropdown-item nav-link" href="three-column.html">Three Column</a></li>
-                                            <li class="nav-item"><a class="dropdown-item nav-link" href="three-colum-sidbar.html">Three Column Sidebar</a></li>
-                                            <li class="nav-item"><a class="dropdown-item nav-link" href="four-column.html">Four Column</a></li>
-                                        </ul>
-                                    </div>
-                                </li>
+                              
+
                                 <li class="nav-item active">
                                     <a class="nav-link" href="contact.html">Contact</a>
                                 </li>
                             </ul>
                             <div class="outer_div">
-                                <a class="icon hover-effect" href="#search"><figure class="mb-0"><img src="assets/images/search-icon.png" alt=""></figure></a>
-                                <a class="icon hover-effect" href="cart.html"><figure class="mb-0"><img src="assets/images/wallet-icon.png" alt=""></figure><span class="badge">0</span></a>
-                                <a class="nav-link get_started hover-effect" href="contact.html">Get Started</a>
+                                    <a class="nav-link get_started hover-effect" href="contact.html">Get Started</a>
                             </div>
                         </div>
                     </nav>
@@ -131,9 +109,9 @@
                     <div class="col-12">
                         <div class="about_banner_content">
                             <h1 class="text-white">Contact Us</h1>
-                            <p class="text-white">Tiusmod enim tempor incididunt aut labore et dolore magna aliua ruis nostrud exercitation ullamco laboris.</p>
+                            <p class="text-white">We’re here to help! Reach out to us for inquiries, support, or any assistance you need.</p>
                             <div class="box">
-                                <a href="index-2.html" class="text-decoration-none">
+                                <a href="./" class="text-decoration-none">
                                     <span class="mb-0">Home</span>
                                 </a>
                                 <figure class="arrow"><img src="assets/images/sub_banner-breadcrumb_arrow.png" alt="" class="img-fluid"></figure>
@@ -180,8 +158,8 @@
                     </div>
                     <div class="box-content">
                         <h4 class="heading">Phone:</h4>
-                        <p><a href="tel:+61383766284" class="text-decoration-none text text-size-16">(+61 3 8376 6284)</a></p>
-                        <p><a href="tel:+80023456789" class="mb-0 text-decoration-none text text-size-16">(+800 2345 6789)</a></p>
+                        <p><a href="tel:+61383766284" class="text-decoration-none text text-size-16">(+323 8376 6284)</a></p>
+                        <p><a href="tel:+80023456789" class="mb-0 text-decoration-none text text-size-16">(+3456 2345 6789)</a></p>
                     </div>
                 </div>
             </div>            
@@ -194,8 +172,8 @@
                     </div>
                     <div class="box-content">
                         <h4 class="heading">Email:</h4>
-                        <p><a href="mailto:info@fortified.com" class="text-decoration-none text-size-16">info@fortified.com</a></p>
-                        <p><a href="mailto:fortified@gmail.com" class="mb-0 text-decoration-none text-size-16">fortified@gmail.com</a></p>
+                        <p><a href="mailto:info@fortified.com" class="text-decoration-none text-size-16">letstalk@fortified.com</a></p>
+                        <p><a href="mailto:fortified@gmail.com" class="mb-0 text-decoration-none text-size-16">support@gmail.com</a></p>
                     </div>
                 </div>
             </div>
@@ -211,7 +189,7 @@
     </div>
 </div>
 <!-- CONTACT INFO SECTION -->
-<section class="contact_form-section">
+<!-- <section class="contact_form-section">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-12">
@@ -253,112 +231,20 @@
             </form>
         </div>
     </div>
-</section>
+</section> -->
 <!-- FOOTER SECTION -->
 <section class="footer_section">
     <div class="container">
         <div class="middle_portion">
             <div class="row">
-                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 order-lg-1 order-sm-1 order-1">
-                    <div class="about_contact_wrapper">
-                        <a href="index-2.html">
-                            <figure>
-                                <img src="assets/images/fortified_footer_logo.png" alt="" class="img-fluid">
-                            </figure>
-                        </a>
-                        <p class="text-size-14">Quia voluptas sit asper aut oit aut fugit sed quia consequuntur magni nesciunt aorro...</p>
-                        <ul class="list-unstyled mb-0">
-                            <li>
-                                <i class="fa-solid fa-phone"></i>
-                                <a href="tel:+61383766284" class="text-decoration-none">+61 3 8376 6284</a>
-                            </li>
-                            <li class="contact_mail">
-                                <i class="fa-sharp fa-solid fa-envelope"></i>
-                                <a href="mailto:Info@fortifiedsecurity.com" class="text-decoration-none">Info@fortifiedsecurity.com</a>
-                            </li>
-                            <li class="mb-0 location">
-                                <i class="fa-solid fa-location-dot location"></i>
-                                <span class="text-size-14">21 King Street Melbourne, 3000, Australia</span>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-xl-2 col-lg-2 col-md-6 col-sm-6 col-6 order-lg-2 order-sm-2 order-2">
-                    <div class="navigation_col links">
-                        <h4>Navigation</h4>
-                        <ul class="list-unstyled mb-0">
-                            <li>
-                                <a href="index-2.html">Home</a>
-                            </li>
-                            <li>
-                                <a href="about.html">About Us</a>
-                            </li>
-                            <li>
-                                <a href="service.html">Services</a>
-                            </li>
-                            <li>
-                                <a href="project.html">Project</a>
-                            </li>
-                            <li>
-                                <a href="blog.html">Blog</a>
-                            </li>
-                            <li>
-                                <a href="contact.html">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-xl-2 col-lg-2 col-md-6 col-sm-6 col-6 order-lg-3 order-sm-4 order-3">
-                    <div class="services_col links">
-                        <h4>Services</h4>
-                        <ul class="list-unstyled mb-0">
-                            <li>
-                                <a href="index-2.html">Network Security</a>
-                            </li>
-                            <li>
-                                <a href="about.html">Database Security</a>
-                            </li>
-                            <li>
-                                <a href="service.html">Web Security</a>
-                            </li>
-                            <li>
-                                <a href="project.html">Locker Security</a>
-                            </li>
-                            <li>
-                                <a href="blog.html">Data Security</a>
-                            </li>
-                            <li>
-                                <a href="contact.html">Cloud Security</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 order-lg-4 order-sm-3 order-4">
-                    <div class="newsletter_content">
-                        <h4>Subscribe to Newsletter</h4>
-                        <form action="javascript:;">
-                            <div class="form-row position-relative">
-                                <input type="email" name="email" id="emailadd" class="form-control" placeholder="Enter Your Email Address">
-                                <div class="input-group-append form-button">
-                                    <button class="btn" name="btnsubmit" id="submitbtn" type="submit"><i class="fa-solid fa-paper-plane"></i></button>
-                                </div>
-                            </div>
-                        </form>
-                        <h6>Follow on social media:</h6>
-                        <ul class="list-unstyled mb-0">
-                            <li class="hover-effect"><a href="https://www.facebook.com/login/"><i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a></li>
-                            <li class="hover-effect"><a href="https://twitter.com/i/flow/login"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a></li>
-                            <li class="hover-effect"><a href="https://linkedin.com/login"><i class="fa-brands fa-linkedin-in mr-0" aria-hidden="true"></i></a></li>
-                        </ul>
-                    </div> 
-                </div>
+
             </div>
         </div>
     </div>
     <div class="bottom_portion">
         <div class="col-12"> 
             <div class="copyright">
-                <p>Copyright ©2024 Design & Developed By <span>Designingmedia</span></p>
+                <p>Copyright ©2025 <span>Fortified</span></p>
             </div>
         </div>
     </div>
