--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
             <div class="col-lg-5 col-md-12 col-sm-12 col-12 d-lg-flex align-items-center d-block text-md-left text-center order-lg-2 order-1">
                 <div class="chooseus_image_wrapper position-relative">
                     <figure class="chooseus_image mb-0 position-relative">
-                        <img src="assets/images/chooseus_image.jpg" alt="" class="img-fluid">
+                        <img src="assets/images/pi.jpg" alt="" class="img-fluid">
                     </figure>
                     <figure class="chooseus_shape mb-0 position-absolute">
                         <img src="assets/images/chooseus_shape.png" alt="" class="img-fluid">
@@ -587,6 +587,12 @@
         <div class="col-12"> 
             <div class="copyright">
                 <p>Copyright ©2025 <span>Fortified</span></p>
+                <p style="display: inline;"> 
+                    <a href="policy.html"><p><span>Policy</span></p></a>
+                 </p>   
+                 <p style="display: inline;"> 
+                    <a href="privacy.html"><p><span>Privacy</span></p></a>
+                 </p>   
             </div>
         </div>
     </div>
