--- a/contact.html
+++ b/contact.html
@@ -145,7 +145,7 @@
                     </div>
                     <div class="box-content">
                         <h4>Location:</h4>
-                        <p class="text-size-16">121 King Street, Melbourne Victoria 3000 Australia</p>
+                        <p class="text-size-16">2871 Clabo Rd, Sevierville, TN 37862, United States</p>
                     </div>
                 </div>
             </div>            
@@ -158,8 +158,8 @@
                     </div>
                     <div class="box-content">
                         <h4 class="heading">Phone:</h4>
-                        <p><a href="tel:+61383766284" class="text-decoration-none text text-size-16">(+323 8376 6284)</a></p>
-                        <p><a href="tel:+80023456789" class="mb-0 text-decoration-none text text-size-16">(+3456 2345 6789)</a></p>
+                        <p><a href="tel:+15164063086" class="text-decoration-none text text-size-16">(+15164063086)</a></p>
+                        <p><a href="</a></p>
                     </div>
                 </div>
             </div>            
@@ -172,8 +172,8 @@
                     </div>
                     <div class="box-content">
                         <h4 class="heading">Email:</h4>
-                        <p><a href="mailto:info@fortified.com" class="text-decoration-none text-size-16">letstalk@fortified.com</a></p>
-                        <p><a href="mailto:fortified@gmail.com" class="mb-0 text-decoration-none text-size-16">support@gmail.com</a></p>
+                        <p><a href="mailto:support@fortifiedspy.com" class="text-decoration-none text-size-16">letstalk@fortified.com</a></p>
+                        <p><a href="mailto:fortifiedspy@gmail.com" class="mb-0 text-decoration-none text-size-16">support@gmail.com</a></p>
                     </div>
                 </div>
             </div>
