--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
     <meta name="title" content="Fortified | The Ultimate Secure Monitoring Solution" />
     <meta name="description" content="Fortified offers cutting-edge monitoring solutions for discreet and reliable tracking. Stay informed with real-time access to calls, messages, GPS, and more—100% secure and undetectable." />
-    <meta name="keywords" content="Fortified, monitoring app, phone tracker, secure tracking, spy app, discreet monitoring, GPS tracking, parental control, anti-spyware, real-time monitoring" />
+    <meta name="keywords" content="Fortified spy, monitoring app, phone tracker, secure tracking, spy app, discreet monitoring, GPS tracking, parental control, anti-spyware, real-time monitoring" />
     <meta name="author" content="Fortified Team" />
     <meta name="robots" content="index, follow" />
     <meta property="og:title" content="Fortified | The Ultimate Secure Monitoring Solution" />
