--- a/index.html
+++ b/index.html
@@ -623,6 +623,42 @@
 <script src="assets/js/quantity.js"></script>
 <script src="assets/js/back-to-top-button.js"></script>
 <script src="assets/js/preloader.js"></script>
+    <!-- Floating WhatsApp Button -->
+<a href="https://wa.me/15164063086" target="_blank" rel="noopener noreferrer" class="whatsapp-float">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Chat" class="whatsapp-icon">
+</a>
+
+<!-- CSS for styling -->
+<style>
+    .whatsapp-float {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        background-color: #25d366;
+        border-radius: 50%;
+        padding: 10px;
+        box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+        transition: transform 0.3s ease-in-out;
+        will-change: transform;
+    }
+    
+    .whatsapp-float:hover {
+        transform: scale(1.1);
+    }
+    
+    .whatsapp-icon {
+        width: 50px;
+        height: 50px;
+    }
+
+    @media (max-width: 600px) {
+        .whatsapp-icon {
+            width: 40px;
+            height: 40px;
+        }
+    }
+</style>
+
 </body>
 
 <!-- Mirrored from html.designingmedia.com/fortified/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 19 Feb 2025 10:38:49 GMT -->
