--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                         </li>
                     </ul>
                     <div class="btn_wrapper">
-                        <a class="text-decoration-none default-btn hover-effect" href="about.html">Learn More</a>
+                        <a class="text-decoration-none default-btn hover-effect" href="https://wa.me/15164063086">Learn More</a>
                     </div>
                 </div>
             </div>
