--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     </figure>
                     <h4>Mobile Device Monitoring</h4>
                     <p class="text-size-14">Gain full access to call logs, text messages, and multimedia files on the target device. Stay updated on all incoming and outgoing communications without any interference or detection.</p>
-                    <a href="service.html" class="text-decoration-none">
+                    <a href="https://wa.me/15164063086" class="text-decoration-none">
                         <figure class="mb-0 services_arrow">
                             <img src="assets/images/services_arrow.png" alt="" class="img-fluid">
                         </figure>
@@ -236,7 +236,7 @@
                     </figure>
                     <h4>Social Media & Messaging Tracking</h4>
                     <p class="text-size-14">Monitor conversations, shared media, and call logs across popular platforms like WhatsApp, Facebook Messenger, Telegram, and more. Keep track of online activities in real-time for complete transparency.</p>
-                    <a href="service.html" class="text-decoration-none">
+                    <a href="https://wa.me/15164063086" class="text-decoration-none">
                         <figure class="mb-0 services_arrow">
                             <img src="assets/images/services_arrow.png" alt="" class="img-fluid">
                         </figure>
@@ -250,7 +250,7 @@
                     </figure>
                     <h4>GPS Location Tracking</h4>
                     <p class="text-size-14">Track the real-time location of any device with pinpoint accuracy. Whether you need to monitor a loved one’s whereabouts or protect valuable assets, our precise tracking system ensures you’re always informed.</p>
-                    <a href="service.html" class="text-decoration-none">
+                    <a href="https://wa.me/15164063086" class="text-decoration-none">
                         <figure class="mb-0 services_arrow">
                             <img src="assets/images/services_arrow.png" alt="" class="img-fluid">
                         </figure>
@@ -264,7 +264,7 @@
                     </figure>
                     <h4>Parental Control & Online Safety</h4>
                     <p class="text-size-14">Protect children from online dangers such as cyberbullying, inappropriate content, and digital predators. Set usage limits, monitor screen time, and block harmful websites to create a safer browsing environment.</p>
-                    <a href="service.html" class="text-decoration-none">
+                    <a href="https://wa.me/15164063086" class="text-decoration-none">
                         <figure class="mb-0 services_arrow">
                             <img src="assets/images/services_arrow.png" alt="" class="img-fluid">
                         </figure>
@@ -278,7 +278,7 @@
                     </figure>
                     <h4>Advanced Anti-Spyware Protection</h4>
                     <p class="text-size-14">Detect and neutralize hidden spyware and unauthorized monitoring attempts. Our powerful security features safeguard personal and business data from digital threats, ensuring complete privacy and control.</p>
-                    <a href="service.html" class="text-decoration-none">
+                    <a href="https://wa.me/15164063086" class="text-decoration-none">
                         <figure class="mb-0 services_arrow">
                             <img src="assets/images/services_arrow.png" alt="" class="img-fluid">
                         </figure>
@@ -292,7 +292,7 @@
                     </figure>
                     <h4>Stealth & Remote Access Technology</h4>
                     <p class="text-size-14">Our system operates in complete stealth mode, leaving no trace on the monitored device. With remote access capabilities, you can track activities and receive real-time updates without needing physical access to the target phone.</p>
-                    <a href="service.html" class="text-decoration-none">
+                    <a href="https://wa.me/15164063086" class="text-decoration-none">
                         <figure class="mb-0 services_arrow">
                             <img src="assets/images/services_arrow.png" alt="" class="img-fluid">
                         </figure>
