--- a/contact.html
+++ b/contact.html
@@ -172,8 +172,8 @@
                     </div>
                     <div class="box-content">
                         <h4 class="heading">Email:</h4>
-                        <p><a href="mailto:support@fortifiedspy.com" class="text-decoration-none text-size-16">letstalk@fortified.com</a></p>
-                        <p><a href="mailto:fortifiedspy@gmail.com" class="mb-0 text-decoration-none text-size-16">support@gmail.com</a></p>
+                        <p><a href="mailto:support@fortifiedspy.com" class="text-decoration-none text-size-16">support@fortifiedspy.com</a></p>
+                        <p><a href="mailto:fortifiedspy@gmail.com" class="mb-0 text-decoration-none text-size-16">fortifiedspy@gmail.com</a></p>
                     </div>
                 </div>
             </div>
