--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <link href="../../unpkg.com/aos%402.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../../cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.css">
 </head>
+    <meta name="google-site-verification" content="S6ae_vXphmL7HTOkovQmY-wTdofYTBm0Bdzi7l2KN3g" />
 
 <body>
 <!-- Back to top button -->
