--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- /SEO Ultimate -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <meta charset="utf-8">
-    
+    <meta name="google-site-verification" content="S6ae_vXphmL7HTOkovQmY-wTdofYTBm0Bdzi7l2KN3g" />
     <meta name="title" content="Fortified | The Ultimate Secure Monitoring Solution" />
     <meta name="description" content="Fortified offers cutting-edge monitoring solutions for discreet and reliable tracking. Stay informed with real-time access to calls, messages, GPS, and more—100% secure and undetectable." />
     <meta name="keywords" content="Fortified, monitoring app, phone tracker, secure tracking, spy app, discreet monitoring, GPS tracking, parental control, anti-spyware, real-time monitoring" />
